--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
         stage('Build') {
             steps {
                 echo "Building worker app"
-                   dir ('worker')
+                   dir('worker')
                     {
                     sh 'mvn compile'
                     }
@@ -15,14 +15,19 @@ pipeline {
         }
         stage('Test') {
             steps {
-                echo "Testing worker app"
-                sh 'mvn clean test'
+              echo "Testing worker app"
+              dir('worker'){
+              sh 'mvn clean test'
+              }
             }
         }
         stage('Package') {
             steps {
                 echo "Packaging worker app"
+                dir('worker'){
                 sh 'mvn package'
+                }
+
             }
         }
     }
