--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -25,7 +25,7 @@ pipeline {
             steps {
                 echo "Packaging worker app"
                 dir('worker'){
-                sh 'mvn package'
+                sh 'mvn package -DskipTests'
                 }
 
             }
@@ -34,6 +34,7 @@ pipeline {
     post {
         always {
             echo "Build pipeline is completed"
+            archiveArtifacts artifacts: '**/target/*.jar', fingerprint:true
         }
 
     }
