added condition for branch and changeset

--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -5,6 +5,9 @@ pipeline {
     }
     stages {
         stage('Build') {
+            when {
+              changeset "**/worker/**"
+                  }
             steps {
                 echo "Building worker app"
                    dir('worker')
@@ -14,6 +17,9 @@ pipeline {
             }
         }
         stage('Test') {
+            when {
+                  changeset "**/worker/**"
+                  }          
             steps {
               echo "Testing worker app"
               dir('worker'){
@@ -22,6 +28,10 @@ pipeline {
             }
         }
         stage('Package') {
+            when {
+              branch 'master'
+              changeset "**/worker/**"
+            }
             steps {
                 echo "Packaging worker app"
                 dir('worker'){
