--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -1,13 +1,14 @@
 pipeline {
-    agent {
-       docker {
-          image 'maven:3.6.1-jdk-8-alpine'
-          args '-v $HOME/.m2:/root/.m2'
-       }
-    }
+   agent none
 
     stages {
         stage('Build') {
+        agent {
+           docker {
+              image 'maven:3.6.1-jdk-8-alpine'
+              args '-v $HOME/.m2:/root/.m2'
+           }
+        }
             when {
               changeset "**/worker/**"
                   }
@@ -20,6 +21,12 @@ pipeline {
             }
         }
         stage('Test') {
+        agent {
+           docker {
+              image 'maven:3.6.1-jdk-8-alpine'
+              args '-v $HOME/.m2:/root/.m2'
+           }
+        }
             when {
                   changeset "**/worker/**"
                   }
@@ -31,6 +38,12 @@ pipeline {
             }
         }
         stage('Package') {
+        agent {
+           docker {
+              image 'maven:3.6.1-jdk-8-alpine'
+              args '-v $HOME/.m2:/root/.m2'
+           }
+        }
             when {
               branch 'master'
               changeset "**/worker/**"
@@ -44,6 +57,26 @@ pipeline {
 
             }
         }
+
+        stage('docker-Package') {
+            agent any
+            when {
+              branch 'master'
+              changeset "**/worker/**"
+            }
+            steps {
+                echo "Packaging worker app with docker"
+                script{
+                  docker.withRegistry('https://index.docker.io/v1','dockerlogin'){
+                  def workerImage = docker.build("anishpatel1281/worker:v{env.BUILD_ID}","./worker")
+                  workerImage.push()
+                  workerImage.push("${env.BRANCH_NAME}")
+                  }
+
+                }
+            }
+        }
+
     }
     post {
         always {
