--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -62,7 +62,7 @@ pipeline {
                 echo "Packaging worker app with docker"
                 script{
                   docker.withRegistry('https://index.docker.io/v1','dockerlogin'){
-                  def workerImage = docker.build("anishpatel1281/worker:v{env.BUILD_ID}","./worker")
+                  def workerImage = docker.build("anishpatel1281/worker:v${env.BUILD_ID}","./worker")
                   workerImage.push()
                   workerImage.push("${env.BRANCH_NAME}")
                   }
