--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -74,7 +74,7 @@ pipeline {
     }
     post {
         always {
-            echo "Build pipeline is completed"
+            echo "Build pipeline for worker is completed now"
         }
 
     }
