--- a/result/Jenkinsfile
+++ b/result/Jenkinsfile
@@ -1,15 +1,13 @@
 pipeline {
-    agent {
-       docker {
-          image 'node:8.16.0-alpine'
-       }
-    }
+   agent none
 
     stages {
         stage('Build') {
-            when {
-              changeset "**/result/**"
-                  }
+        agent {
+           docker {
+              image 'node:8.16.0-alpine'
+           }
+        }
             steps {
                 echo "Building result app"
                 dir('result'){
@@ -18,21 +16,44 @@ pipeline {
             }
         }
         stage('Test') {
-            when {
-                  changeset "**/result/**"
-            }
+        agent {
+           docker {
+              image 'node:8.16.0-alpine'
+           }
+        }
             steps {
               echo "Testing result app"
               dir('result'){
+                  sh 'npm install'
                   sh 'npm test'
               }
            }
         }
+        stage('docker-Package') {
+            agent any
+            when {
+              branch 'master'
+            }
+            steps {
+                echo "Packaging result app with docker"
+                script{
+                  docker.withRegistry('https://index.docker.io/v1/','dockerlogin'){
+                  def resultImage = docker.build("anishpatel1281/result:v${env.BUILD_ID}","./result")
+                  resultImage.push()
+                  resultImage.push("${env.BRANCH_NAME}")
+                  }
+
+                }
+            }
+        }
+
+
+
 
     }
     post {
         always {
-            echo "Build pipeline is completed for result app"
+            echo "Build pipeline is completed for result"
         }
 
     }
