--- a/vote/Jenkinsfile
+++ b/vote/Jenkinsfile
@@ -1,16 +1,15 @@
 pipeline {
-    agent {
-       docker {
-          image 'python:2.7.16-slim'
-          args  '--user root'
-       }
-    }
+   agent none
 
     stages {
         stage('Build') {
-            when {
-              changeset "**/vote/**"
-                  }
+        agent {
+           docker {
+              image 'python:2.7.16-slim'
+              args  '--user root'
+           }
+        }
+
             steps {
                 echo "Building vote app"
                 dir('vote'){
@@ -19,16 +18,40 @@ pipeline {
             }
         }
         stage('Test') {
-            when {
-                  changeset "**/vote/**"
-            }
+        agent {
+           docker {
+              image 'python:2.7.16-slim'
+              args  '--user root'
+           }
+        }
+
             steps {
               echo "Testing vote app"
               dir('vote'){
+                  sh 'pip install -r requirements.txt'
                   sh 'nosetests -v'
               }
            }
         }
+
+        stage('docker-Package') {
+            agent any
+            when {
+              branch 'master'
+            }
+            steps {
+                echo "Packaging vote app with docker"
+                script{
+                  docker.withRegistry('https://index.docker.io/v1/','dockerlogin'){
+                  def votemage = docker.build("anishpatel1281/vote:v${env.BUILD_ID}","./vote")
+                  voteImage.push()
+                  voteImage.push("${env.BRANCH_NAME}")
+                  }
+
+                }
+            }
+        }
+
 
     }
     post {
