--- a/vote/Jenkinsfile
+++ b/vote/Jenkinsfile
@@ -43,7 +43,7 @@ pipeline {
                 echo "Packaging vote app with docker"
                 script{
                   docker.withRegistry('https://index.docker.io/v1/','dockerlogin'){
-                  def votemage = docker.build("anishpatel1281/vote:v${env.BUILD_ID}","./vote")
+                  def voteImage = docker.build("anishpatel1281/vote:v${env.BUILD_ID}","./vote")
                   voteImage.push()
                   voteImage.push("${env.BRANCH_NAME}")
                   }
